@@ -202,10 +202,13 @@
             </properties>
             <build>
                 <plugins>
-                    <!-- plugin>
+                    <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
                         <version>${jacoco.version}</version>
+                        <configuration>
+                            <destFile>blaaaaaaaaaaaaaaaaaaaaaa</destFile>
+                        </configuration>
                         <executions>
                             <execution>
                                 <id>default-prepare-agent</id>
@@ -221,30 +224,12 @@
                                 </goals>
                             </execution>
                         </executions>
-                    </plugin -->
+                    </plugin>
 
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>${maven.surefire.plugin.version}</version>
-                            <configuration>
-                                <skipTests>true</skipTests>
-                            </configuration>
-                    </plugin>
-
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-failsafe-plugin</artifactId>
-                        <version>2.17</version>
-                        <executions>
-                            <execution>
-                                <id>surefire-it</id>
-                                <phase>integration-test</phase>
-                                <goals>
-                                    <goal>test</goal>
-                                </goals>
-                            </execution>
-                        </executions>
                         <configuration combine.self="override">
                             <redirectTestOutputToFile>true</redirectTestOutputToFile>
                             <argLine>
@@ -276,7 +261,7 @@
             <properties>
                 <coverage.reports.dir>${basedir}/target/coverage-reports</coverage.reports.dir>
                 <!-- no idea why the reportPath for it doesn't work.. so lets hack it in like this -->
-                <!-- sonar.jacoco.reportPath>${coverage.reports.dir}/jacoco-banana.exec</sonar.jacoco.reportPath -->
+                <sonar.jacoco.reportPath>${coverage.reports.dir}/jacoco-banana.exec</sonar.jacoco.reportPath>
                 <sonar.jacoco.itReportPath>${coverage.reports.dir}/jacoco-it.exec</sonar.jacoco.itReportPath>
             </properties>
             <build>
@@ -311,6 +296,42 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>${maven.surefire.plugin.version}</version>
                         <configuration combine.self="override">
+                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                            <argLine>
+                                -Xms128m -Xmx1G -XX:MaxPermSize=128M
+                                -Dhazelcast.version.check.enabled=false
+                                -Dhazelcast.mancenter.enabled=false
+                                -Dhazelcast.logging.type=none
+                                -Dhazelcast.test.use.network=false
+                            </argLine>
+
+                            <includes>
+                                <include>**/ExecutorConfigTest*.java</include>
+                                <include>**/TopicTest*.java</include>
+                                <include>**/LockTest*.java</include>
+                            </includes>
+
+                            <groups>com.hazelcast.test.annotation.QuickTest,com.hazelcast.test.annotation.SlowTest</groups>
+                            <excludedGroups>com.hazelcast.test.annotation.NightlyTest</excludedGroups>
+                            <excludedGroups>com.hazelcast.test.annotation.ProblematicTest</excludedGroups>
+                        </configuration>
+                    </plugin>
+
+                     <plugin>
+                         <groupId>org.apache.maven.plugins</groupId>
+                         <artifactId>maven-failsafe-plugin</artifactId>
+                         <version>2.17</version>
+                         <executions>
+                             <execution>
+                                 <id>surefire-it</id>
+                                 <phase>integration-test</phase>
+                                 <goals>
+                                     <goal>test</goal>
+                                 </goals>
+                             </execution>
+                         </executions>
+
+                         <configuration combine.self="override">
                             <redirectTestOutputToFile>true</redirectTestOutputToFile>
                             <argLine>
                                 -Xms129m -Xmx1G -XX:MaxPermSize=129M
